// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sl-scripts create:lib createPackage should create the right object for a react library: react-lib 1`] = `
"{
  \\"name\\": \\"stoplight\\",
  \\"version\\": \\"0.0.0\\",
  \\"description\\": \\"description...\\",
  \\"keywords\\": [],
  \\"sideEffects\\": false,
  \\"homepage\\": \\"https://github.com/stoplightio/scripts\\",
  \\"bugs\\": \\"https://github.com/stoplightio/scripts/issues\\",
  \\"author\\": \\"support@stoplight\\",
  \\"repository\\": {
    \\"type\\": \\"git\\",
    \\"url\\": \\"https://github.com/stoplightio/scripts.git\\"
  },
  \\"license\\": \\"Apache-2.0\\",
  \\"main\\": \\"src/index.ts\\",
  \\"files\\": [
    \\"**/*\\"
  ],
  \\"engines\\": {
    \\"node\\": \\">=10\\"
  },
  \\"scripts\\": {
    \\"build\\": \\"sl-scripts build\\",
    \\"build.docs\\": \\"build-storybook -c .storybook -o docs-auto\\",
    \\"bundle\\": \\"sl-scripts bundle\\",
    \\"commit\\": \\"git-cz\\",
    \\"eslint.check\\": \\"eslint --ext .js,.jsx,.ts,.tsx .\\",
    \\"eslint.fix\\": \\"eslint --ext .js,.jsx,.ts,.tsx . --fix\\",
    \\"lint\\": \\"yarn prettier.check && yarn eslint.check\\",
    \\"lint.fix\\": \\"yarn prettier.fix; yarn eslint.fix\\",
    \\"prettier.check\\": \\"prettier --ignore-path .eslintignore --check '**/*.{js,jsx,ts,tsx,md}'\\",
    \\"prettier.fix\\": \\"prettier --ignore-path .eslintignore --write '**/*.{js,jsx,ts,tsx,md}'\\",
    \\"release\\": \\"sl-scripts release\\",
    \\"release.docs\\": \\"sl-scripts release:docs\\",
    \\"release.dryRun\\": \\"sl-scripts release --dry-run --debug\\",
    \\"storybook\\": \\"start-storybook -p 9001\\",
    \\"test\\": \\"jest\\",
    \\"test.prod\\": \\"yarn lint && yarn test --coverage --maxWorkers=2\\",
    \\"test.update\\": \\"yarn test --updateSnapshot\\",
    \\"test.watch\\": \\"yarn test --watch\\",
    \\"yalc\\": \\"yarn build && (cd dist && yalc push)\\",
    \\"yalc.watch\\": \\"nodemon --watch 'src/**/*' --exec 'yarn yalc'\\"
  },
  \\"peerDependencies\\": {},
  \\"dependencies\\": {
    \\"@stoplight/ui-kit\\": \\"1.x.x\\",
    \\"react\\": \\"16.8.3\\",
    \\"react-dom\\": \\"16.8.3\\"
  },
  \\"devDependencies\\": {
    \\"@stoplight/eslint-config\\": \\"^1.1.0\\",
    \\"@stoplight/scripts\\": \\"4.x.x\\",
    \\"@stoplight/storybook-config\\": \\"1.x.x\\",
    \\"@types/enzyme\\": \\"3.x.x\\",
    \\"@types/enzyme-adapter-react-16\\": \\"1.x.x\\",
    \\"@types/jest\\": \\"24.x.x\\",
    \\"@types/react\\": \\"16.x.x\\",
    \\"@types/react-dom\\": \\"16.x.x\\",
    \\"@typescript-eslint/eslint-plugin\\": \\"~2.27.0\\",
    \\"@typescript-eslint/parser\\": \\"~2.27.0\\",
    \\"enzyme\\": \\"3.x.x\\",
    \\"enzyme-adapter-react-16\\": \\"1.x.x\\",
    \\"enzyme-to-json\\": \\"3.x.x\\",
    \\"eslint\\": \\"^6.8.0\\",
    \\"eslint-config-prettier\\": \\"^6.10.1\\",
    \\"eslint-plugin-import\\": \\"^2.20.2\\",
    \\"eslint-plugin-jest\\": \\"^23.8.2\\",
    \\"eslint-plugin-prettier\\": \\"^3.1.2\\",
    \\"eslint-plugin-react\\": \\"^7.19.0\\",
    \\"eslint-plugin-react-hooks\\": \\"^3.0.0\\",
    \\"eslint-plugin-simple-import-sort\\": \\"^5.0.2\\",
    \\"jest\\": \\"24.x.x\\",
    \\"jest-enzyme\\": \\"7.x.x\\",
    \\"nodemon\\": \\"1.x.x\\",
    \\"prettier\\": \\"1.x.x\\",
    \\"ts-jest\\": \\"24.x.x\\",
    \\"tslint-react\\": \\"3.6.x\\",
    \\"tslint-react-hooks\\": \\"1.1.x\\",
    \\"typescript\\": \\"3.3.x\\"
  },
  \\"lint-staged\\": {
    \\"*.{ts,tsx}$\\": [
      \\"yarn lint.fix\\",
      \\"git add\\"
    ]
  },
  \\"husky\\": {
    \\"hooks\\": {
      \\"commit-msg\\": \\"commitlint -E HUSKY_GIT_PARAMS\\",
      \\"pre-commit\\": \\"lint-staged\\"
    }
  },
  \\"config\\": {
    \\"commitizen\\": {
      \\"path\\": \\"node_modules/cz-conventional-changelog\\"
    }
  },
  \\"commitlint\\": {
    \\"extends\\": [
      \\"@commitlint/config-conventional\\"
    ]
  },
  \\"prettier\\": {
    \\"printWidth\\": 120,
    \\"singleQuote\\": true,
    \\"trailingComma\\": \\"all\\"
  },
  \\"release\\": {
    \\"extends\\": \\"@stoplight/scripts/release\\"
  }
}"
`;

exports[`sl-scripts create:lib createPackage should create the right object for a ts library: plain-lib 1`] = `
"{
  \\"name\\": \\"stoplight\\",
  \\"version\\": \\"0.0.0\\",
  \\"description\\": \\"description...\\",
  \\"keywords\\": [],
  \\"sideEffects\\": false,
  \\"homepage\\": \\"https://github.com/stoplightio/scripts\\",
  \\"bugs\\": \\"https://github.com/stoplightio/scripts/issues\\",
  \\"author\\": \\"support@stoplight\\",
  \\"repository\\": {
    \\"type\\": \\"git\\",
    \\"url\\": \\"https://github.com/stoplightio/scripts.git\\"
  },
  \\"license\\": \\"Apache-2.0\\",
  \\"main\\": \\"src/index.ts\\",
  \\"files\\": [
    \\"**/*\\"
  ],
  \\"engines\\": {
    \\"node\\": \\">=10\\"
  },
  \\"scripts\\": {
    \\"build\\": \\"sl-scripts build\\",
    \\"bundle\\": \\"sl-scripts bundle\\",
    \\"commit\\": \\"git-cz\\",
    \\"eslint.check\\": \\"eslint --ext .js,.jsx,.ts,.tsx .\\",
    \\"eslint.fix\\": \\"eslint --ext .js,.jsx,.ts,.tsx . --fix\\",
    \\"lint\\": \\"yarn prettier.check && yarn eslint.check\\",
    \\"lint.fix\\": \\"yarn prettier.fix; yarn eslint.fix\\",
    \\"prettier.check\\": \\"prettier --ignore-path .eslintignore --check '**/*.{js,jsx,ts,tsx,md}'\\",
    \\"prettier.fix\\": \\"prettier --ignore-path .eslintignore --write '**/*.{js,jsx,ts,tsx,md}'\\",
    \\"release\\": \\"sl-scripts release\\",
    \\"release.docs\\": \\"sl-scripts release:docs\\",
    \\"release.dryRun\\": \\"sl-scripts release --dry-run --debug\\",
    \\"test\\": \\"jest\\",
    \\"test.prod\\": \\"yarn lint && yarn test --coverage --maxWorkers=2\\",
    \\"test.update\\": \\"yarn test --updateSnapshot\\",
    \\"test.watch\\": \\"yarn test --watch\\",
    \\"yalc\\": \\"yarn build && (cd dist && yalc push)\\",
    \\"yalc.watch\\": \\"nodemon --watch 'src/**/*' --exec 'yarn yalc'\\"
  },
  \\"peerDependencies\\": {},
  \\"dependencies\\": {},
  \\"devDependencies\\": {
    \\"@stoplight/eslint-config\\": \\"^1.1.0\\",
    \\"@stoplight/scripts\\": \\"4.x.x\\",
    \\"@types/jest\\": \\"24.x.x\\",
    \\"@typescript-eslint/eslint-plugin\\": \\"~2.27.0\\",
    \\"@typescript-eslint/parser\\": \\"~2.27.0\\",
    \\"eslint\\": \\"^6.8.0\\",
    \\"eslint-config-prettier\\": \\"^6.10.1\\",
    \\"eslint-plugin-import\\": \\"^2.20.2\\",
    \\"eslint-plugin-jest\\": \\"^23.8.2\\",
    \\"eslint-plugin-prettier\\": \\"^3.1.2\\",
    \\"eslint-plugin-react\\": \\"^7.19.0\\",
    \\"eslint-plugin-react-hooks\\": \\"^3.0.0\\",
    \\"eslint-plugin-simple-import-sort\\": \\"^5.0.2\\",
    \\"jest\\": \\"24.x.x\\",
    \\"nodemon\\": \\"1.x.x\\",
    \\"prettier\\": \\"1.x.x\\",
    \\"ts-jest\\": \\"24.x.x\\",
    \\"typescript\\": \\"3.3.x\\"
  },
  \\"lint-staged\\": {
    \\"*.{ts,tsx}$\\": [
      \\"yarn lint.fix\\",
      \\"git add\\"
    ]
  },
  \\"husky\\": {
    \\"hooks\\": {
      \\"commit-msg\\": \\"commitlint -E HUSKY_GIT_PARAMS\\",
      \\"pre-commit\\": \\"lint-staged\\"
    }
  },
  \\"config\\": {
    \\"commitizen\\": {
      \\"path\\": \\"node_modules/cz-conventional-changelog\\"
    }
  },
  \\"commitlint\\": {
    \\"extends\\": [
      \\"@commitlint/config-conventional\\"
    ]
  },
  \\"prettier\\": {
    \\"printWidth\\": 120,
    \\"singleQuote\\": true,
    \\"trailingComma\\": \\"all\\"
  },
  \\"release\\": {
    \\"extends\\": \\"@stoplight/scripts/release\\"
  }
}"
`;
